# ipu-hpc-cookbook

./: .gitignore  LICENSE  README.md
alignment/: README.md
appending-vals-to-a-global-array/: CMakeLists.txt  README.md
appending-vals-to-a-global-array/src/: AppendingToGlobalArray.cpp  CMakeLists.txt
appending-vals-to-a-global-array/src/codelets/: AppendingValsToGlobal.cpp
common/: CommonIpuUtils.hpp  cxxopts.hpp
complex-local-data-structures/: README.md
complex-local-data-structures/src/codelets/: WhatIsAllowed.cpp
data-dependent-communication/: CMakeLists.txt  README.md
data-dependent-communication/src/: CMakeLists.txt  ParticleShedding.cpp
data-dependent-communication/src/codelets/: ParticleCodeletsCommon.h  ParticleSimCodelet.cpp
efficient-data-streaming/: README.md
encouraging-auto-vectorisation/: README.md
inspecting-compiler-output/: README.md
ipu-model/: README.md
manual-vectorisation/: README.md
monte-carlo-pi-calculation/: CMakeLists.txt  README.md
monte-carlo-pi-calculation/src/: CMakeLists.txt  all_ipu_pi.cpp  cpu_pi.cpp  generated_ipu_pi.cpp  integrals_vertex.cpp  iterative_ipu_pi.cpp  pi_options.hpp  pi_vertex.cpp  vertex_ipu_cont.cpp  vertex_ipu_corner.cpp  vertex_ipu_nag.cpp  vertex_ipu_pi.cpp  vertex_ipu_prod.cpp
pipelined-wavefront/: README.md
preventing-data-rearrangements/: README.md
productive-dev-workflow/: README.md
scheduling-multiple-workers-per-tile/: README.md
scheduling-multiple-workers-that-share-data/: README.md
skeleton-program/: CMakeLists.txt  README.md
skeleton-program/cmake/Modules/: Findpoplar.cmake
skeleton-program/src/: CMakeLists.txt  SkeletonForIpu.cpp
skeleton-program/src/codelets/: SkeletonCodelets.cpp
structured-halo-exchange/: CMakeLists.txt  README.md
structured-halo-exchange/src/: CMakeLists.txt  GraphcoreUtils.hpp  HaloExchangeWithExtraBuffers.cpp  HaloRegionApproaches.cpp  StructuredGridUtils.hpp
structured-halo-exchange/src/codelets/: HaloExchangeCodelets.cpp  HaloExchangeCommon.h  HaloRegionApproachesCodelets.cpp
timing-program-execution/: README.md
unstructured-neighbour-lists/: CMakeLists.txt  README.md
unstructured-neighbour-lists/src/: CMakeLists.txt  Unstructured.cpp
unstructured-neighbour-lists/src/codelets/: UnstructuredCodelets.cpp
using-inline-assembly/: README.md
using-remote-buffers/: CMakeLists.txt  README.md  cmake
using-remote-buffers/include/: CommonIpuUtils.hpp
using-remote-buffers/src/: CMakeLists.txt  RemoteBuffers.cpp
using-remote-buffers/src/codelets/: RemoteBuffers.cpp
writing-an-assembly-vertex/: README.md
writing-unit-tests/: README.md
